# r-tree

./: .gitignore  LICENSE  Makefile  README.md  RTree.cabal  RTree.hs  cabal.project  changelog.md  data-r-tree.cabal  stack.yaml
.circleci/: config.yml
.github/: haskell.yml
.github/workflows/: haskell.yml
Data/: RTree.hs
Data/RTree/: Base.hs  MBB.hs  Strict.hs
app/visualize/: Main.hs
benchmark/space/: Main.hs
benchmark/time/: Main.hs
no/Data/: NoTree.hs
no/Data/NoTree/: Strict.hs
src/Data/Primitive/Array/: Extra.hs
src/Data/RTree/: Internal.hs  Lazy.hs  MBR.hs  Strict.hs
src/Data/RTree/Double/: Strict.hs
src/Data/RTree/Double/Strict/: Debug.hs  Internal.hs  Unsafe.hs
src/Data/RTree/Float/: Strict.hs
src/Data/RTree/Float/Strict/: Debug.hs  Internal.hs  Unsafe.hs
src/Data/RTree/Internal/: Constants.hs  Pretty.hs
src/Data/RTree/Lazy/: Internal.hs
src/Data/RTree/MBR/: Internal.hs
test/: Gen.hs  RTreeProperties.hs  RTreeStrict.hs  test.csv
test/properties/: Main.hs
test/properties/Test/RTree/Double/: Strict.hs
test/strict/: Main.hs
visualizer/: Main.hs  r-tree-visualizer.cabal
