cabal-version: 2.2

name:                   data-r-tree
version:                0.6.0
synopsis:               R-Tree is a spatial data structure similar to Quadtrees or B-Trees.
description:            R-Tree is a spatial data structure similar to Quadtrees or B-Trees.
  
  An R-Tree is a balanced tree and optimized for lookups. This implemetation useses an R-Tree to privide
  a map to arbitrary values. 

license:                MIT
license-file:           LICENSE
author:                 Sebastian Wagner, Birte Wagner
maintainer:             sebastian@spawnhost.de
copyright:              Sebastian Wagner, Birte Wagner
category:               Data Structures
build-type:             Simple

Extra-source-files:     changelog.md
                        README.md

bug-reports:            https://github.com/sebastian-philipp/r-tree/issues
homepage:               https://github.com/sebastian-philipp/r-tree

source-repository head
  type:                 git
  location:             https://github.com/sebastian-philipp/r-tree.git

common base                         { build-depends: base                           >= 4          && < 5      }

common binary                       { build-depends: binary                         >= 0.8        && < 0.11   }
common containers                   { build-depends: containers                     >= 0.5        && < 0.7    }
common deepseq                      { build-depends: deepseq                        >= 1.4        && < 1.5    }
common ghc-heap-view                { build-depends: ghc-heap-view                  >= 0.5        && < 0.7    }
common hedgehog                     { build-depends: hedgehog                       >= 1.0.2      && < 1.1    }
common hspec                        { build-depends: hspec                          >= 2.4        && < 2.8    }
common HUnit                        { build-depends: HUnit                          >= 1.6        && < 1.7    }
common hw-hspec-hedgehog            { build-depends: hw-hspec-hedgehog              >= 0.1        && < 0.2    }

common config
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs -Wno-orphans

common data-r-tree
  build-depends:        data-r-tree

library
  import:               base, config
                      , binary
                      , deepseq
  exposed-modules:      Data.RTree
                        Data.RTree.MBB
                        Data.RTree.Base
                        Data.RTree.Strict


test-suite properties
  import:               base, config
                      , binary
                      , containers
                      , data-r-tree
                      , ghc-heap-view
                      , hedgehog
                      , hspec
                      , HUnit
                      , hw-hspec-hedgehog
  type:                 exitcode-stdio-1.0
  main-is:              RTreeProperties.hs
  other-extensions:     NoMonomorphismRestriction
  other-modules:        Gen
  hs-source-dirs:       test

test-suite strict
  import:               base, config
                      , data-r-tree
                      , deepseq
                      , ghc-heap-view
                      , hedgehog
                      , hspec
                      , HUnit
                      , hw-hspec-hedgehog
  type:                 exitcode-stdio-1.0
  main-is:              RTreeStrict.hs
  other-modules:        Gen
  hs-source-dirs:       test
