cabal-version: 2.2

name:                   data-r-tree
version:                1.1.0
synopsis:               Two-dimensional R-trees.
description:            Two-dimensional spatial trees utilizing R-tree and R*-tree
                        algorithms.

license:                MIT
license-file:           LICENSE
author:                 Sebastian Wagner, Birte Wagner, Oleksii Divak
maintainer:             Oleksii Divak <frozenwitness@gmail.com>
copyright:              Sebastian Wagner, Birte Wagner, Oleksii Divak
category:               Data Structures
build-type:             Simple

extra-doc-files:        changelog.md
                        README.md

bug-reports:            https://github.com/sebastian-philipp/r-tree/issues
homepage:               https://github.com/sebastian-philipp/r-tree

source-repository head
  type:                 git
  location:             https://github.com/sebastian-philipp/r-tree.git



library
  build-depends:        base      >= 4.12  && < 5
                      , deepseq   >= 1.4.3 && < 1.6

  hs-source-dirs:       src

  exposed-modules:      Data.RTree.Double.Strict
                        Data.RTree.Double.Strict.Debug
                        Data.RTree.Double.Strict.Unsafe
                        Data.RTree.Float.Strict
                        Data.RTree.Float.Strict.Debug
                        Data.RTree.Float.Strict.Unsafe

  other-modules:        Data.RTree.Double.Strict.Internal
                        Data.RTree.Float.Strict.Internal

  ghc-options:          -Wall

  default-language:     Haskell2010

benchmark time
  build-depends:        base
                      , data-r-tree
                      , deepseq
                      , gauge       >= 0.2 && < 0.3
                      , random      >= 1.2 && < 1.3

  type:                 exitcode-stdio-1.0

  main-is:              Main.hs

  ghc-options:          -Wall

  hs-source-dirs:       benchmark/time

  default-language:     Haskell2010

benchmark space
  build-depends:        base
                      , data-r-tree
                      , random
                      , weigh       >= 0.0.16 && < 0.1

  type:                 exitcode-stdio-1.0

  main-is:              Main.hs

  ghc-options:          -Wall

  hs-source-dirs:       benchmark/space

  default-language:     Haskell2010

test-suite properties
  build-depends:        base
                      , data-r-tree
                      , deepseq
                      , hspec       >= 2 && < 2.12
                      , random

  type:                 exitcode-stdio-1.0

  main-is:              Main.hs

  ghc-options:          -Wall

  hs-source-dirs:       no
                      , test/properties

  default-language:     Haskell2010
